Fix mobile breakpoints of cards on small screens

--- a/prototype/css/app.scss
+++ b/prototype/css/app.scss
@@ -97,9 +97,19 @@ body {
     box-shadow: 0 2px 5px rgba(0,0,0,.05);
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 767.98px) {
+    body.nav-fixed.nav-submenu {
+        padding-top: 4.2rem;
+    }
+
     .card-deck {
+        display: block;
+
         margin-left: -17px;
         margin-right: -17px;
+
+        .card {
+           margin: 0 0 1rem 0;
+        }
     }
 }
